...
                                </userDefinedRuntimeAttributes>
                            </view>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Crowd Monitor" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HWX-iQ-OeD">
                                <rect key="frame" x="112.5" y="220" width="189" height="33"/>
                                <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="30"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="200" height="50"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <state key="normal" title="Sign In">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                <color key="tintColor" name="appBlack"/>
                                                <state key="normal" title="Schedule"/>
                                                <connections>
                                                    <action selector="schedulePressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="q2r-6j-GES"/>
...
                                <segments>
                                    <segment title="Today"/>
                                    <segment title="Yesterday"/>
                                </segments>
                                <color key="selectedSegmentTintColor" name="lightGreen"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Log" image="chart.bar.fill" catalog="system" id="VoG-r7-Y4P"/>
                    <navigationItem key="navigationItem" id="hTP-Tn-X1Y"/>
                    <connections>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Count Data" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="05o-sX-CVD">
                                <rect key="frame" x="30" y="50" width="136.5" height="33"/>
                                <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="30"/>
...
                                </connections>
                            </segmentedControl>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Admin Code" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kws-1o-Sfy">
                                <rect key="frame" x="60" y="451" width="294" height="34"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SLh-lp-bzz">
                                        <rect key="frame" x="0.0" y="0.0" width="150" height="40"/>
                                        <state key="normal" title="Submit">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0PF-tO-HNp">
                                <rect key="frame" x="60" y="401" width="294" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
